minor html changes

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <main>
       <form>
         <label for="food">Dishes</label>
-        <select class="inputs" name="food" id="dish">
-          <option value="Pizza">Pizza</option>
-          <option value="Bolognese">Bolognese</option>
-          <option value="Tuna Salad">Tuna Salad</option>
-          <option value="Chicken Soup">Chicken soup</option>
-          <option value="Tofu Wok">Tofu Wok</option>
-          <option value="Lentil Soup">Lentil soup</option>
+        <select class="inputs" name="food" id="dish" placeholder="">
+          <option selected="selected">Select Food</option>
+          <option value="Easter Lamb">Easter Lamb</option>
+          <option value="Mämmi">Mämmi</option>
+          <option value="Easter egg">Easter egg</option>
+          <option value="Candy">Candy</option>
+          <option value="Pasha">Pasha</option>
+          <option value="Easter Bunny">Easter Bunny</option>
         </select>
         <label for="carbs">Carbohydrates: </label>
         <input class="inputs" id="carbs" type="number" />
